Fixed Moon Model

--- a/moonmapper/main.html
+++ b/moonmapper/main.html
@@ -191,7 +191,7 @@
   <body onload="clearSelection()">
     <h1 class="title">Moon Mapper</h1>
 
-    <model-viewer class = "" id="moonModel" auto-rotate disable-zoom src="https://vedantgithub123.github.io/Moon_1_3474.glb" disable-pan = "none" interaction-prompt = "none" camera-controls ="none" camera-orbit="275deg 90deg 700px" position="fixed" onmousedown="change()"></model-viewer>  
+    <model-viewer class = "" id="moonModel" auto-rotate disable-zoom src="resources/moonModel.glb" disable-pan = "none" interaction-prompt = "none" camera-controls ="none" camera-orbit="275deg 90deg 700px" position="fixed" onmousedown="change()"></model-viewer>  
     
     <div class="dropbox"  onchange="yearSelected()">
       <select class="input" id = "yearBox">
