--- a/wrorandomizer-2024/index.html
+++ b/wrorandomizer-2024/index.html
@@ -7,8 +7,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script src="C:\Users\Vedan\OneDrive\Documents\VedantGithub123.github.io\wrorandomizer-2024\script.js"></script>
-        <link rel="stylesheet" href="C:\Users\Vedan\OneDrive\Documents\VedantGithub123.github.io\wrorandomizer-2024\style.css">
+        <script src="https://vedantgithub123.github.io/wrorandomizer-2024/script.js"></script>
+        <link rel="stylesheet" href="https://vedantgithub123.github.io/wrorandomizer-2024/style.css">
     </head>
 
     <body>
@@ -22,7 +22,7 @@
         </div>
 
         <div id="random-elements">
-            <img id="map-image" src="C:\Users\Vedan\OneDrive\Documents\VedantGithub123.github.io\wrorandomizer-2024\images\mat-senior.png">
+            <img id="map-image" src="https://github.com/VedantGithub123/VedantGithub123.github.io/blob/main/wrorandomizer-2024/images/mat-senior.png?raw=true">
         </div>
 
         <h2 id="randomize" onclick="randomize()">RANDOMIZE</h2>
